superbitty/tests/ui/BitFieldCompatible/complex_discriminant.stderr
error: complex expressions in the discriminant are not supported with `BitFieldCompatible` (only integers)
 --> tests/ui/BitFieldCompatible/complex_discriminant.rs:9:9
  |
9 |     A = foo(),
  |         ^^^^^
